Chore: Add `@Nullable` annotations, improve error handling, and enhance JavaDoc in `xmldoclet`